# gemv-opencl

./: CMakeLists.txt  README.md
include/: common.h  kernel_preprocessor.hpp
src/: entry.cpp  kernel_preprocessor.cpp
src/kernel/: gemm.cl  gemmv1.cl  gemmv2.cl
